# rusty-gecko

./: .gitignore  Cargo.toml  LICENSE
api_responses/simple_price/: coins_one_correct_one_incorrect  coins_several_correct  coins_two_incorrect  coins_zero  currencies_one_correct_one_incorrect  currencies_several_correct  currencies_two_incorrect  currencies_zero
src/: client.rs  endpoints.rs  errors.rs  generic.rs  lib.rs  ping.rs  simple.rs  utils.rs
