[package]
name = "rusty-gecko"
version = "0.1.0"
authors = ["oren0e <none>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.2", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
url = "2.2.1"
anyhow = "1.0"
serde_json = "1.0.48"
serde = {version = "1.0.104", features = ["derive"]}
futures = "0.3"
fomat-macros = "0.3.1"
thiserror = "1.0.24"
#rusty-gecko_derive = { path = "rusty-gecko_derive"}